Actualización: Cambios en el código del backend